netstat semi working